k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachingdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cachingdemo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cachingdemo
    spec:
      containers:
        - name: cachingdemo
          image: cachingdemo
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - name: http
              containerPort: 8080
            - name: hazelcast
              containerPort: 5701
