k8s/04-deployment-internal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachingdemointernal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cachingdemointernal
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cachingdemointernal
    spec:
      containers:
        - name: cachingdemointernal
          image: cachingdemo
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - name: http
              containerPort: 8080
            - name: hazelcast
              containerPort: 5701
