k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cachingdemo-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cachingdemo
  type: ClusterIP
