k8s/03-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: cachingdemo-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: cachingdemo-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
